A little bit change design,add server,add playlist

--- a/CourseProject/CourseProject/App.config
+++ b/CourseProject/CourseProject/App.config
@@ -12,4 +12,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="MusicService" connectionString="data source=tcp:courseprojectformsuicservice.database.windows.net,1433;initial catalog=MusicService_CourseProject;user id=NIikitoza;password=********!;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+<connectionStrings><add name="MusicService" connectionString="data source=tcp:courseprojectformsuicservice.database.windows.net,1433;initial catalog=MusicService_CourseProject;user id=NIikitoza;password=140410qq!;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
