Add playlist at main window

--- a/CourseProject/CourseProject/CourseProject.csproj
+++ b/CourseProject/CourseProject/CourseProject.csproj
@@ -253,9 +253,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Language\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
